# onepiece-research

./: .gitignore  .vercelignore  CLAUDE.md  LICENSE  README.md  demo_matchup.py  demo_smoke.py  demo_with_effects.py  pyproject.toml  requirements.txt  vercel.json
api/: blob_storage.py  index.py  main.py  spec_persistence.py
db/: _nn_feature_keys_v2.json  _opp_action_feature_keys.json  _unified_feature_keys.json  absolute_strength_adaptive_vs_greedy.json  absolute_strength_v5_vs_greedy.json  ai_params.json  attached_don_passive_audit.json  audit_acknowledged.json  audit_cost_consistency.json  audit_coverage.json  audit_opp_attack_cost.json  bad_moves_dofla_vs_boney.json  bad_moves_v2.json  card_effectiveness.json  card_effects.archive_simplified.json  card_effects.json  card_effects.review.json  card_intents.json  card_roles.json  cardqa_tagged.json  cards.json  conditional_grant_generation_report.json  cost_handler_coverage.json  data_layer_64_status.json  deck_archetypes.json  dsl_jp_audit.json  dsl_jp_audit.md  dsl_primitive_audit.json  dsl_primitive_audit.md  duplicate_variant_overlay_log.md  effect_text_vs_overlay_audit.json  expert_annotations.jsonl  feedback_resolutions.json  fill_empty_overlay_log.md  fix_add_vs_untap_don_log.md  fix_empty_in_hand_cost_plus_log.md  fix_empty_ko_immune_log.md  fix_empty_misc_static_log.md  fix_empty_on_ko_reactive_log.md  fix_empty_own_turn_static_log.md  (+74 more)
decks/: cardrush_1223.analysis.json  cardrush_1223.json  cardrush_1273.analysis.json  cardrush_1273.json  cardrush_1308.analysis.json  cardrush_1308.json  cardrush_1339.json  (+91 more)
(+2432 files in other folders)
