# Vercel の Python runtime (= @vercel/python@4.x) は `uv` 経由で
# pyproject.toml の [project] table を必ず読む。 dependencies はここに記載。
# ローカル開発の `pip install -r requirements.txt` 互換のため requirements.txt も
# 同等内容を保持 (= 同期に注意)。

[project]
name = "onepiece-research"
version = "0.1.0"
description = "ONE PIECE Card Game research API + engine (= /api/* on Vercel)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "httpx>=0.27",
    "anthropic>=0.40",
    # 本番 Postgres (= Neon) 接続用。 ローカルは DATABASE_URL 未設定で SQLite fallback。
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# 開発用 (= テスト)。 Vercel 本番 bundle には含まれない。
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
